[package]
name = "dbbench"
version = "0.1.0"
edition = "2024"
description = "A database benchmarking tool"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
fnv = "1.0.7"
heed = "0.22.0"
histogram = "0.11.3"
rand = { version = "0.9.2", features = ["thread_rng"] }
rand_distr = "0.5.1"
rocksdb = "0.24.0"
